<resources>
    <string name="app_name">ICT602 Map Search</string>
    <string name="hello_blank_fragment">Blank fragment</string>
    <string name="api_key">AIzaSyBzwMbw_sIJJThSlaBdXxyHUORlBdQk-dw</string>
    <string name="api_key_ori">AIzaSyC30522yFCSX2hRN8GZfOtxM0t_2mpOcvI</string>

    <string name="title_text">ICT602 Map</string>
    <string name="aboutTitle">About</string>
    <string name="copyright">https://github.com/fauzirentah/BMICalculator</string>
    <string name="author_developer">Developed by:</string>
    <string name="author_name">Fauzi Rentah, 2020221172</string>
    <string name="author_cid">Arbaie Yahya, 2020369245</string>
    <string name="author_group">NBCS2409A</string>
    <string name="author_code">ICT602 Mobile Technology &amp; Development</string>
    <string name="author_course">Mobile Technology &amp; Development</string>
    <string name="author_program">CS240 Bachelor of Information Technology</string>
    <string name="button1_text">Github Repo</string>
    <string name="button2_text">Back</string>
    <string name="button3_text">About App</string>
</resources>